--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "type": "module",
   "module": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
+  "start": "node app.js"
+ },
   "keywords": [],
   "author": "",
   "license": "ISC",
